# map-engraver

./: .coveragerc  .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md  requirements.txt
.github/mocks/: autotrace.sh
.github/workflows/: build.yml  coverage.yml
example/: .gitignore  layer-filters.py  layer-main.yml  map.yml
map-engraver/: map-engraver.py
map-engraver/canvas/: canvas.py  canvasBuilder.py
map-engraver/graphicshelper/: __init__.py  cairo_helper.py  cario_svg_surface_fork.py  shapely_helper.py  svg_surface.py
map-engraver/map/: __init__.py  imap.py  map.py  map_config.py
map-engraver/map/features/: __init__.py  background.py  margins.py  text.py
map-engraver/map/layer/: __init__.py  background_layer.py  cacheable_layer.py  ilayer.py  layer.py  margin_layer.py  osm_layer.py  sublayer.py  svg_layer.py
map-engraver/osmparser/: convert.py  map.py  node.py  parser.py  relation.py  way.py
map-engraver/osmshapely/: __init__.py  line_string.py  point.py  polygon.py
map-engraver/osmshapely/ops/: __init__.py  converter_pipeline.py  shapely_clipper.py  shapely_converter.py  shapely_transformer.py
map-engraver/serializer/: __init__.py  serializer.py
map_engraver/canvas/: __init__.py  canvas.py  canvas_bbox.py  canvas_builder.py  canvas_coordinate.py  canvas_unit.py
map_engraver/data/canvas_geometry/: rect.py
map_engraver/data/geo/: geo_coordinate.py  geo_coordinate_transformers.py
map_engraver/drawable/: drawable.py
map_engraver/graphicshelper/: autotrace_text.py  cairo_helper.py  cairo_svg_helper.py  cario_svg_surface_fork.py  svg_surface.py
map_engraver/transformers/: geo_canvas_scale.py  geo_canvas_transformers.py  geo_coordinate.py  geo_coordinate_transformers.py  osm_to_shapely.py
mapengraver/canvas/: __init__.py  canvas.py  canvas_builder.py  canvas_coordinate.py  canvas_unit.py
mapengraver/drawable/: drawable.py
mapengraver/graphicshelper/: __init__.py  cario_svg_surface_fork.py  svg_surface.py
mapengraver/logging/: progressable.py
mapengraver/transformers/: geo_canvas_scale.py  geo_canvas_transformers.py  geo_coordinate_transformers.py  geo_to_canvas_scale.py  osm_to_shapely.py  project_geo_to_canvas.py
tests/: draw_graphicshelper_shapely_helper_polygon_noise.py  draw_map_features_buildings_basic.py  draw_map_features_generic_shadow_inset_drawer.py  draw_map_features_nature_water.py  draw_map_features_text.py  draw_noisy_polygon.py  draw_text.py  osm-parser.py  test_draw_mapsdetails_buildings_basic.py  test_mapsdetails_buildings_basic.py  test_utils.py  utils.py
tests/canvas/: test_canvas.py  test_canvas_bbox.py  test_canvas_builder.py  test_canvas_coordinate.py  test_canvas_unit.py  unit_scale.py
tests/graphicshelper/: test_autotrace_text.py  test_cairo_svg_helper.py
tests/transformers/: data.osm  incomplete_data.osm  test_geo_canvas_transformers.py  test_geo_coordinate_transformers.py  test_osm_to_shapely.py  test_project_geo_to_canvas.py  unimplemented_data.osm
(+148 files in other folders)
