[tool.poetry]
name = "map-engraver"
version = "0.1.0"
description = "Tool for creating vector maps in the style of engraved maps"
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
cairocffi = "^1.2.0"
tqdm = "^4.58.0"
Shapely = "^1.7.1"
CairoSVG = "^2.5.2"
pyproj = "^3.1.0"
Pillow = "^9.0.1"
pangocffi = "^0.10.0"
pangocairocffi = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.2"
coverage = "^6.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["map_engraver"]

[tool.coverage.report]
show_missing = true
