[tool.poetry]
name = "map-engraver"
version = "0.1.0"
description = "Tool for creating vector maps in the style of engraved maps"
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
cairocffi = "^1.4.0"
tqdm = "^4.64.0"
Shapely = "^2.0.1"
CairoSVG = "^2.7.0"
pyproj = "^3.4.0"
Pillow = "^10.0.1"
pangocffi = "^0.13.0"
pangocairocffi = "^0.7.0"

[tool.poetry.group.gdal]
optional = true

[tool.poetry.group.gdal.dependencies]
# We need to lock ourselves to 3.4.3 as that is the version that is supported
# by GitHub Action Ubuntu environments. See .github/workflows/build.yml
GDAL = "3.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
coverage = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["map_engraver"]

[tool.coverage.report]
show_missing = true
